Some change to port it on 26.2 part 2